--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "7.8.1",
-    "tslib": "2.6.2",
-    "zone.js": "0.13.3",
-    "@angular/core": "16.2.12",
-    "@types/jasmine": "4.3.6",
+    "@angular/animations": "16.2.12",
+    "@angular/cdk": "16.2.12",
     "@angular/common": "16.2.12",
     "@angular/compiler": "16.2.12",
-    "@angular/platform-browser": "16.2.12"
+    "@angular/core": "16.2.12",
+    "@angular/forms": "16.2.12",
+    "@angular/material": "16.2.12",
+    "@angular/platform-browser": "16.2.12",
+    "@types/jasmine": "4.3.6",
+    "rxjs": "7.8.1",
+    "tslib": "2.6.2",
+    "zone.js": "0.13.3"
   },
   "scripts": {
     "ng": "ng",
